cluster/apps/telegram/liderbot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app liderbot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  ports:
    - protocol: TCP
      name: liderbot
      port: 8080
      targetPort: 8080
